--- a/rbk/assets/css/screen.css
+++ b/rbk/assets/css/screen.css
@@ -5,3 +5,4 @@
 @import url('puzzle-icon.css');
 @import url('puzzle-text.css');
 @import url('more-button.css');
+@import url('rbk-paginator.css');
