--- a/rbk/assets/css/screen.css
+++ b/rbk/assets/css/screen.css
@@ -1,6 +1,7 @@
 @import url('reset.css');
 @import url('flexboxgrid.css');
 @import url('fonts.css');
+@import url('clearfix.css');
 
 @import url('puzzle-icon.css');
 @import url('puzzle-text.css');
