--- a/rbk/style.css
+++ b/rbk/style.css
@@ -407,6 +407,30 @@ a.rbk-header__menu-item.is-active {
   border: 1px solid #eaeaea;
 }
 
+/* Small devices (tablets, 768px and up) */
+
+@media only screen and (min-width: 992px) {
+
+  .rbk-projects-page .rbk-projects__slider-item {
+    margin-right: 0;
+  }
+
+  .rbk-projects-page .rbk-projects__slider-list {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    -moz-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    -o-flex-flow: row wrap;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+
+}
+
 .rbk-projects__slider-item:last-child {
   margin-right: 0;
 }
