--- a/rbk/assets/css/more-button.css
+++ b/rbk/assets/css/more-button.css
@@ -8,6 +8,9 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .more-button_style_white,
