--- a/rbk/assets/css/rbk-input.css
+++ b/rbk/assets/css/rbk-input.css
@@ -11,3 +11,23 @@
 textarea.rbk-input {
   height: auto;
 }
+
+/* Small devices (tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+
+  .rbk-input {
+    height: 40px;
+  }
+
+}
+
+/*Extra small devices (phones)*/
+
+@media only screen and (max-width : 767px) {
+
+  .rbk-input {
+    height: 40px;
+  }
+
+}
