--- a/darelsalam/assets/stylesheets/jednotka_mint.css
+++ b/darelsalam/assets/stylesheets/jednotka_mint.css
@@ -1,5 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
 /**
  * Name: Jednotka - Multipurpose Website HTML Template
  * Author: http://themeforest.net/user/BublinaStudio
